crates/reinhardt-pages/tests/ui/server_fnset/fail/invalid_lookup.stderr
error[E0308]: mismatched types
  --> tests/ui/server_fnset/fail/invalid_lookup.rs:18:12
   |
16 |     fn lookup_field() -> UniqueFieldRef<Article, String> {
   |                          ------------------------------- expected `UniqueFieldRef<Article, std::string::String>` because of return type
17 |         // SAFETY: The handwritten test model declares `id` as its unique primary key.
18 |         unsafe { UniqueFieldRef::<Article, i64>::from_model_field("id") }
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `UniqueFieldRef<Article, String>`, found `UniqueFieldRef<Article, i64>`
   |
   = note: expected struct `UniqueFieldRef<Article, std::string::String>`
              found struct `UniqueFieldRef<Article, i64>`
